--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
                         <form action="https://www.aviasales.ru/">
                             <div class="first-group"> <!--первые формы-->
                                 <div>
-                                    <label for="firstname">Имя</label>
-                                    <input type="text" name="firstname" id="firstname"/>
+                                    <label for="name1">Имя</label>
+                                      <input type="text" name="firstname" id="name1"/>
                                 </div>
                                 <div>
-                                    <label for="secondname">Фамилия</label>
-                                    <input type="text" name="secondname" id="secondname"/>
+                                    <label for="name2">Фамилия</label>
+                                      <input type="text" name="secondname" id="name2"/>
                                 </div>
                                 <div>
-                                    <label for="email">Email</label>
-                                    <input type="text" name="email" id="email"/>
+                                    <label for="mail">Email</label>
+                                    <input type="text" name="email" id="mail"/>
                                 </div>
                                 <div>
-                                    <label for="phone">Телефон</label>
-                                    <input type="number" name="phone" id="phone"/>
+                                    <label for="ph">Телефон</label>
+                                    <input type="number" name="phone" id="ph"/>
                                 </div>
                             </div>  <!--первые формы-->
                             <h2>Адрес доставки</h2>
