работа с первыми формами

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
                     <img src="mountains-2.jpg" class="picture"/>
                     <div class="form">
                         <h1>Регистрация</h1>
-                        <form action="https://www.aviasales.ru/">
+                        <form action="https://www.bit-by-bit.ru/form-submit">
                             <div class="first-group"> <!--первые формы-->
-                                <div>
+                                <div class="first-group2">
                                     <label for="name1">Имя</label>
                                     <input type="text" name="firstname" id="name1" class="input-first-group"/>
                                 </div>
-                                <div>
+                                <div class="first-group2">
                                     <label for="name2">Фамилия</label>
                                     <input type="text" name="secondname" id="name2" class="input-first-group"/>
                                 </div>
-                                <div>
+                                <div class="first-group2">
                                     <label for="mail">Email</label>
                                     <input type="text" name="email" id="mail" class="input-first-group"/>
                                 </div>
-                                <div>
+                                <div class="first-group2">
                                     <label for="ph">Телефон</label>
                                     <input type="number" name="phone" id="ph" class="input-first-group"/>
                                 </div>
